--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:theme="@style/Theme.CoffeeShop"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.CartActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.ItemsListActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.DetailActivity"
             android:exported="false" />
